# portfolio_backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  Dockerfile  README.md  cdk.context.json  cdk.json  commitlint.config.js  docker-compose.yml  package-lock.json  package.json  pyproject.toml  release.config.js  sst.config.ts
.github/: dependabot.yml
.github/workflows/: main.yml  test.yml
localstack/: config  localstack-entrypoint.sh
src/: main.py
src/api/: api_router.py
src/api/routers/: email.py
src/app/: main.py  models.py  sst.py
src/app/api/: api_router.py
src/app/api/routers/: curriculum.py  email.py  healthcheck.py
src/app/core/: application.py  boto_client_proxy.py  constants.py  logger.py  settings.py
src/app/services/: send_email_service.py
src/core/: application.py  logger.py
src/tests/: conftest.py
src/tests/integration/: test_contact_me.py  test_curriculum.py  test_healthcheck.py
stacks/: Function.ts  IAM.ts  deploy.py  iam.py  stack.py
templates/: release-notes.hbs
tests/: conftest.py  test_dummy.py
tests/integration/: test_contact_me.py
